--- a/index.html
+++ b/index.html
@@ -5,20 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>Jaala-performance by ManRueda</title>
 
-    <script src="../components/webcomponentsjs/webcomponents.js"></script>
+    <script src="components/webcomponentsjs/webcomponents.js"></script>
 
     <script src="javascripts/jaala-performance.js"></script>
 
-    <link rel="import" href="../components/code-editor/code-editor.html">
-    <link rel="import" href="../components/core-toolbar/core-toolbar.html">
-    <link rel="import" href="../components/core-header-panel/core-header-panel.html">
-    <link rel="import" href="../components/core-icons/core-icons.html">
-    <link rel="import" href="../components/paper-icon-button/paper-icon-button.html">
-    <link rel="import" href="../components/font-roboto/roboto.html">
-    <link rel="import" href="../components/paper-input/paper-input.html">
-    <link rel="import" href="../components/paper-button/paper-button.html">
-    <link rel="import" href="../components/paper-toast/paper-toast.html">
-    <link rel="import" href="../components/paper-dialog/paper-dialog.html">
+    <link rel="import" href="components/code-editor/code-editor.html">
+    <link rel="import" href="components/core-toolbar/core-toolbar.html">
+    <link rel="import" href="components/core-header-panel/core-header-panel.html">
+    <link rel="import" href="components/core-icons/core-icons.html">
+    <link rel="import" href="components/paper-icon-button/paper-icon-button.html">
+    <link rel="import" href="components/font-roboto/roboto.html">
+    <link rel="import" href="components/paper-input/paper-input.html">
+    <link rel="import" href="components/paper-button/paper-button.html">
+    <link rel="import" href="components/paper-toast/paper-toast.html">
+    <link rel="import" href="components/paper-dialog/paper-dialog.html">
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
