--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <script src="components/webcomponentsjs/webcomponents.js"></script>
 
-    <script src="javascripts/jaala-performance.js"></script>
+    <script src="js/jaala-performance.js"></script>
 
     <link rel="import" href="components/code-editor/code-editor.html">
     <link rel="import" href="components/core-toolbar/core-toolbar.html">
@@ -20,8 +20,8 @@
     <link rel="import" href="components/paper-toast/paper-toast.html">
     <link rel="import" href="components/paper-dialog/paper-dialog.html">
 
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/pygment_trac.css">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
 
     <!--[if lt IE 9]>
@@ -29,6 +29,7 @@
     <![endif]-->
   </head>
   <body fullbleed vertical layout unresolved>
+  <a href="https://github.com/ManRueda/jaala-performance/" class="forkMe"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/38ef81f8aca64bb9a64448d0d70f1308ef5341ab/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6461726b626c75655f3132313632312e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png"></a>
     <core-header-panel flex>
       <core-toolbar id="mainheader">
         <span flex>Jaala-performance</span>
@@ -52,7 +53,8 @@
       </div>
     </core-header-panel>
 
-    <paper-toast id="toast" text="The test is complete..."></paper-toast>
+    <paper-toast id="successToast" text="The test is complete..."></paper-toast>
+    <paper-toast id="errorToast" text="The test ends with errors"></paper-toast>
 
     <paper-dialog id="resultDialog" class="scrolling" transition="core-transition-center" backdrop autoclosedisabled role="dialog" heading="Result..." >
       <div>
@@ -72,39 +74,45 @@
       });
 
       document.querySelector('#runTest').addEventListener('click', function click(argument) {
-        document.querySelector('#toast').dismiss();
+        document.querySelector('#successToast').dismiss();
+        document.querySelector('#errorToast').dismiss();
 
 
         comparar = new Comparer(editorOne, editorTwo);
-        comparar.run();
+        var result = comparar.run();
 
         document.querySelector('#resultDialog div').innerText = '';
-        for(var i = 0; i < comparar.tests.length; i++ ){
-          var H3 = document.createElement('h3');
-          H3.innerText = comparar.tests[i].name;
-          var UL = document.createElement('UL');
-          var LI = document.createElement('li');
-          LI.innerText = 'Starts: ' + comparar.tests[i].starts;
-          UL.appendChild(LI);
-          LI = document.createElement('li');
-          LI.innerText = 'Ends: ' + comparar.tests[i].ends;
-          UL.appendChild(LI);
-          LI = document.createElement('li');
-          LI.innerText = 'Total Time: ' + comparar.tests[i].time;
-          UL.appendChild(LI);
-          document.querySelector('#resultDialog div').appendChild(H3);
-          document.querySelector('#resultDialog div').appendChild(UL);
+        if (result){
+          document.querySelector('#errorToast').show();
+        }else{
+          for(var i = 0; i < comparar.tests.length; i++ ){
+            var H3 = document.createElement('h3');
+            H3.innerText = comparar.tests[i].name;
+            var UL = document.createElement('UL');
+            var LI = document.createElement('li');
+            LI.innerText = 'Starts: ' + comparar.tests[i].starts;
+            UL.appendChild(LI);
+            LI = document.createElement('li');
+            LI.innerText = 'Ends: ' + comparar.tests[i].ends;
+            UL.appendChild(LI);
+            LI = document.createElement('li');
+            LI.innerText = 'Total Time: ' + comparar.tests[i].time;
+            if (comparar.tests[i].time === comparar.bestTime)
+              LI.style.color = 'green';
+            UL.appendChild(LI);
+            document.querySelector('#resultDialog div').appendChild(H3);
+            document.querySelector('#resultDialog div').appendChild(UL);
+          }
+          document.querySelector('#resultDialog').open();
+          document.querySelector('#successToast').show();
         }
-
-        document.querySelector('#resultDialog').open();
-        document.querySelector('#toast').show();
       })
     </script>
     
     
 
 
-    <script src="javascripts/scale.fix.js"></script>
+    <script src="js/scale.fix.js"></script>
     <script type="text/javascript">
       var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
       document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
