Google Analytics changes

--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
     
     
 
-    <google-analytics domain="manrueda.github.io" code="UA-48130906-2"></google-analytics>
+    <google-analytics domain="manrueda.github.io" code="UA-48130906-2" displayFeatures></google-analytics>
     <script src="js/scale.fix.js"></script>
   </body>
 </html>
